Fix tooltip z-index muss über z-index der spinbox sein

--- a/css/kijs.gui.less
+++ b/css/kijs.gui.less
@@ -2952,7 +2952,7 @@ div.kijs-grid {
 div.kijs-tooltip {
     position: fixed;
     display: block;
-    z-index: 40101;
+    z-index: 50101;
     border-radius: 4px;
     padding: 4px;
     border: 1px solid @panel-borderColor;
